--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,101 @@
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+build==1.3.0
+cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+chromadb==1.0.16
+click==8.2.1
+coloredlogs==15.0.1
+contourpy==1.3.3
+cycler==0.12.1
+distro==1.9.0
+durationpy==0.10
+faiss-cpu==1.12.0
 filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.59.0
 fsspec==2025.7.0
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+grpcio==1.74.0
+h11==0.16.0
 hf-xet==1.1.7
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
 huggingface-hub==0.34.4
+humanfriendly==10.0
 idna==3.10
+importlib-metadata==8.7.0
+importlib-resources==6.5.2
 jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
+kubernetes==33.1.0
+markdown-it-py==4.0.0
 markupsafe==3.0.2
+matplotlib==3.10.5
+mdurl==0.1.2
+mmh3==5.2.0
 mpmath==1.3.0
 networkx==3.5
 numpy==2.3.2
+oauthlib==3.3.1
+onnxruntime==1.22.1
+openai==1.99.9
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-grpc==1.36.0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
 openvino==2025.2.0
 openvino-telemetry==2025.2.0
+orjson==3.11.2
+overrides==7.7.0
 packaging==25.0
+pandas==2.3.1
 pillow==11.3.0
+posthog==5.4.0
+protobuf==6.31.1
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pybase64==1.4.2
+pydantic==2.11.7
+pydantic-core==2.33.2
+pygments==2.19.2
+pyparsing==3.2.3
+pypika==0.48.9
+pyproject-hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
 pyyaml==6.0.2
+redis==6.4.0
+referencing==0.36.2
 regex==2025.7.34
 requests==2.32.4
+requests-oauthlib==2.0.0
+rich==14.1.0
+rpds-py==0.27.0
+rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.1
 scipy==1.16.1
 sentence-transformers==5.1.0
 setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
 sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.21.4
 torch==2.8.0+cpu
@@ -31,5 +103,14 @@ torchaudio==2.8.0+cpu
 torchvision==0.23.0+cpu
 tqdm==4.67.1
 transformers==4.55.2
+typer==0.16.0
 typing-extensions==4.14.1
+typing-inspection==0.4.1
+tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.35.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websocket-client==1.8.0
+websockets==15.0.1
+zipp==3.23.0
