--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ pydantic==2.11.7
 pydantic-core==2.33.2
 pygments==2.19.2
 pyparsing==3.2.3
+pypdf==6.0.0
 pypika==0.48.9
 pyproject-hooks==1.2.0
 python-dateutil==2.9.0.post0
@@ -97,6 +98,7 @@ sniffio==1.3.1
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tiktoken==0.11.0
 tokenizers==0.21.4
 torch==2.8.0+cpu
 torchaudio==2.8.0+cpu
